@@ -1,3 +1,8 @@
+02/09/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Fixed some syntax highlighting problems with DTDs that have internal
+      subsets.
+
 02/02/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Added support for smart HOME/END. HOME and END will now
